HomeWork-5/Kubernetes/mysql-reads.loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-reads
  namespace: default
spec:
  clusterIP: 10.35.240.2
  externalIPs:
  - 34.72.151.187
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30699
    port: 3305
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: LoadBalancer
