HomeWork-5/Kubernetes/HomeWork-1-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"    
spec:
  rules:
  - host: hi-load-social-network.svn.su
    http:
      paths:
      - backend:
          serviceName: home-work-1
          servicePort: 80 # k8 service port
        path: /
